--- a/header-partial.html
+++ b/header-partial.html
@@ -1,7 +1,7 @@
 <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
   <header class="mdl-layout__header mdl-color--grey-100 mdl-color-text--grey-600">
     <div class="mdl-layout__header-row">
-      <span class="mdl-layout-title">amdg > Warehouse</span>
+      <span class="mdl-layout-title">Warehouse / Record delivery</span>
       <div class="mdl-layout-spacer"></div>
       <nav class="mdl-navigation">
           <img src="images/user.jpg" class="demo-avatar">
