--- a/record-delivery.html
+++ b/record-delivery.html
@@ -63,6 +63,70 @@
        </nav>
       </div>
     </header>
+    <main class="mdl-layout__content mdl-color--grey-100">
+      <div class="mdl-card">
+        <div class="mdl-card__title">
+          <h2 class="mdl-card__title-text">Record delivery</h2>
+        </div>
+        <div class="mdl-card__supporting-text">
+
+          <!-- Date input -->
+          <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+            <input class="mdl-textfield__input" type="text" id="date" pattern="^(19|20)\d\d([- /.])(0[1-9]|1[012])\2(0[1-9]|[12][0-9]|3[01])">
+            <label class="mdl-textfield__label" for="date">Date</label>
+            <span class="mdl-textfield__error">Must follow format YYYY-MM-DD</span>
+          </div>
+          <!-- End date input -->
+
+          <!-- Time input -->
+          <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+            <input class="mdl-textfield__input" type="text" id="time" pattern="^([0[0-9]|1[0-9]|2[0-3]):[0-5][0-9]">
+            <label class="mdl-textfield__label" for="time">Time</label>
+            <span class="mdl-textfield__error">Must follow format HH:MM (24-hour time)</span>
+          </div>
+          <!-- End time input -->
+
+          <!-- Supplier input -->
+          <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+            <input class="mdl-textfield__input" type="text" id="supplier">
+            <label class="mdl-textfield__label" for="supplier">Supplier</label>
+          </div>
+          <!-- End supplier input -->
+
+          <!-- Receiver input -->
+          <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+            <input class="mdl-textfield__input" type="text" id="receiver" disabled>
+            <label class="mdl-textfield__label" for="receiver">Receiver</label>
+          </div>
+          <!-- End receiver input -->
+
+
+          <!-- Table -->
+          <table class="mdl-data-table mdl-js-data-table">
+            <thead>
+              <tr>
+                <th>Item ID</th>
+                <th class="mdl-data-table__cell--non-numeric">Description</th>
+                <th>Quantity</th>
+                <th>Cost</th>
+                <th>Total</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>21007</td>
+                <td class="mdl-data-table__cell--non-numeric">Nokia 1200 Black</td>
+                <td>5</td>
+                <td>1,380.00</td>
+                <td>6,900.00</td>
+              </tr>
+            </tbody>
+          </table>
+          <!-- End table -->
+
+        </div>
+      </div>
+    </main>
   </div>
   <script src="https://code.getmdl.io/1.1.3/material.min.js"></script>
 </body>
