--- a/record-delivery.html
+++ b/record-delivery.html
@@ -32,6 +32,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.cyan-light_blue.min.css">
   <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles/warehouse-styles.css">
   <style>
   #view-source {
     position: fixed;
@@ -48,7 +49,7 @@
   <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
     <header class="mdl-layout__header mdl-color--grey-100 mdl-color-text--grey-600">
       <div class="mdl-layout__header-row">
-        <span class="mdl-layout-title">Warehouse / Record delivery</span>
+        <span class="mdl-layout-title">Warehouse</span>
         <div class="mdl-layout-spacer"></div>
         <nav class="mdl-navigation">
             <img src="images/user.jpg" class="demo-avatar">
@@ -64,68 +65,83 @@
       </div>
     </header>
     <main class="mdl-layout__content mdl-color--grey-100">
-      <div class="mdl-card">
-        <div class="mdl-card__title">
-          <h2 class="mdl-card__title-text">Record delivery</h2>
+      <section class="section--center mdl-grid mdl-grid--no-spacing">
+        <div class="mdl-cell mdl-cell--12-col">
+          <h2> Record delivery </h2>
+          All fields are required.
         </div>
-        <div class="mdl-card__supporting-text">
 
-          <!-- Date input -->
-          <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-            <input class="mdl-textfield__input" type="text" id="date" pattern="^(19|20)\d\d([- /.])(0[1-9]|1[012])\2(0[1-9]|[12][0-9]|3[01])">
-            <label class="mdl-textfield__label" for="date">Date</label>
-            <span class="mdl-textfield__error">Must follow format YYYY-MM-DD</span>
-          </div>
-          <!-- End date input -->
-
-          <!-- Time input -->
-          <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-            <input class="mdl-textfield__input" type="text" id="time" pattern="^([0[0-9]|1[0-9]|2[0-3]):[0-5][0-9]">
-            <label class="mdl-textfield__label" for="time">Time</label>
-            <span class="mdl-textfield__error">Must follow format HH:MM (24-hour time)</span>
-          </div>
-          <!-- End time input -->
-
-          <!-- Supplier input -->
-          <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-            <input class="mdl-textfield__input" type="text" id="supplier">
-            <label class="mdl-textfield__label" for="supplier">Supplier</label>
-          </div>
-          <!-- End supplier input -->
-
-          <!-- Receiver input -->
-          <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-            <input class="mdl-textfield__input" type="text" id="receiver" disabled>
-            <label class="mdl-textfield__label" for="receiver">Receiver</label>
-          </div>
-          <!-- End receiver input -->
-
-
-          <!-- Table -->
-          <table class="mdl-data-table mdl-js-data-table">
-            <thead>
-              <tr>
-                <th>Item ID</th>
-                <th class="mdl-data-table__cell--non-numeric">Description</th>
-                <th>Quantity</th>
-                <th>Cost</th>
-                <th>Total</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>21007</td>
-                <td class="mdl-data-table__cell--non-numeric">Nokia 1200 Black</td>
-                <td>5</td>
-                <td>1,380.00</td>
-                <td>6,900.00</td>
-              </tr>
-            </tbody>
-          </table>
-          <!-- End table -->
-
+        <!-- Date input -->
+        <div class="mdl-cell mdl-cell--5-col mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+          <input class="mdl-textfield__input" type="text" id="date" pattern="^(19|20)\d\d([- /.])(0[1-9]|1[012])\2(0[1-9]|[12][0-9]|3[01])">
+          <label class="mdl-textfield__label" for="date">Date</label>
+          <span class="mdl-textfield__error">Must follow format YYYY-MM-DD</span>
         </div>
-      </div>
+        <!-- End date input -->
+
+        <div class="mdl-cell mdl-cell--2-col">
+        </div>
+
+        <!-- Time input -->
+        <div class="mdl-cell mdl-cell--5-col mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+          <input class="mdl-textfield__input" type="text" id="time" pattern="^([0[0-9]|1[0-9]|2[0-3]):[0-5][0-9]">
+          <label class="mdl-textfield__label" for="time">Time</label>
+          <span class="mdl-textfield__error">Must follow format HH:MM (24-hour time)</span>
+        </div>
+        <!-- End time input -->
+
+        <!-- Supplier input -->
+        <div class="mdl-cell mdl-cell--5-col mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+          <input class="mdl-textfield__input" type="text" id="supplier">
+          <label class="mdl-textfield__label" for="supplier">Supplier</label>
+        </div>
+        <!-- End supplier input -->
+
+        <div class="mdl-cell mdl-cell--2-col">
+        </div>
+
+        <!-- Receiver input -->
+        <div class="mdl-cell mdl-cell--5-col mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+          <input class="mdl-textfield__input" type="text" id="receiver" disabled>
+          <label class="mdl-textfield__label" for="receiver">Receiver</label>
+        </div>
+        <!-- End receiver input -->
+
+        <div class="mdl-card mdl-cell mdl-cell--12-col mdl-shadow--2dp">
+          <div class="mdl-card__title mdl-cell mdl-cell--12-col">
+            <h2 class="mdl-card__title-text">Record delivery</h2>
+          </div>
+          <div class="mdl-card__supporting-text">
+
+
+
+
+            <!-- Table -->
+            <table class="mdl-cell mdl-cell--12-col mdl-data-table mdl-js-data-table">
+              <thead>
+                <tr>
+                  <th>Item ID</th>
+                  <th class="mdl-data-table__cell--non-numeric">Description</th>
+                  <th>Quantity</th>
+                  <th>Cost</th>
+                  <th>Total</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>21007</td>
+                  <td class="mdl-data-table__cell--non-numeric">Nokia 1200 Black</td>
+                  <td>5</td>
+                  <td>1,380.00</td>
+                  <td>6,900.00</td>
+                </tr>
+              </tbody>
+            </table>
+            <!-- End table -->
+
+          </div>
+        </div>
+      </section>
     </main>
   </div>
   <script src="https://code.getmdl.io/1.1.3/material.min.js"></script>
