--- a/record-delivery.html
+++ b/record-delivery.html
@@ -106,16 +106,16 @@
           <label class="mdl-textfield__label" for="receiver">Receiver</label>
         </div>
         <!-- End receiver input -->
-
+      </section>
+      <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--2dp">
         <div class="mdl-card mdl-cell mdl-cell--12-col mdl-shadow--2dp">
+          <button class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon" id="btn2">
+              <i class="material-icons">delete</i>
+          </button>
           <div class="mdl-card__title mdl-cell mdl-cell--12-col">
             <h2 class="mdl-card__title-text">Record delivery</h2>
           </div>
           <div class="mdl-card__supporting-text">
-
-
-
-
             <!-- Table -->
             <table class="mdl-cell mdl-cell--12-col mdl-data-table mdl-js-data-table">
               <thead>
@@ -138,7 +138,6 @@
               </tbody>
             </table>
             <!-- End table -->
-
           </div>
         </div>
       </section>
