--- a/record-delivery.html
+++ b/record-delivery.html
@@ -33,6 +33,11 @@
   <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.cyan-light_blue.min.css">
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="styles/warehouse-styles.css">
+
+  <!-- getmdl-select inclusions-->
+  <link rel="stylesheet" href="styles/getmdl-select.css">
+  <script src="js/getmdl-select.js"></script>
+  
   <style>
   #view-source {
     position: fixed;
@@ -107,37 +112,42 @@
         </div>
         <!-- End receiver input -->
       </section>
+
       <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--2dp">
         <div class="mdl-card mdl-cell mdl-cell--12-col mdl-shadow--2dp">
+          <!--
           <button class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon" id="btn2">
               <i class="material-icons">delete</i>
           </button>
-          <div class="mdl-card__title mdl-cell mdl-cell--12-col">
-            <h2 class="mdl-card__title-text">Record delivery</h2>
-          </div>
+        -->
+        <div class="mdl-card__title mdl-cell mdl-cell--12-col">
+          <h2 class="mdl-card__title-text">Item</h2>
+        </div>
+
           <div class="mdl-card__supporting-text">
-            <!-- Table -->
-            <table class="mdl-cell mdl-cell--12-col mdl-data-table mdl-js-data-table">
-              <thead>
-                <tr>
-                  <th>Item ID</th>
-                  <th class="mdl-data-table__cell--non-numeric">Description</th>
-                  <th>Quantity</th>
-                  <th>Cost</th>
-                  <th>Total</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>21007</td>
-                  <td class="mdl-data-table__cell--non-numeric">Nokia 1200 Black</td>
-                  <td>5</td>
-                  <td>1,380.00</td>
-                  <td>6,900.00</td>
-                </tr>
-              </tbody>
-            </table>
-            <!-- End table -->
+            <!-- Item ID input -->
+            <div class="mdl-cell mdl-cell--5-col mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+              <input class="mdl-textfield__input" type="text" pattern="-?[0-9]*(\.[0-9]+)?" id="itemID">
+              <label class="mdl-textfield__label" for="itemID">Item ID</label>
+              <span class="mdl-textfield__error">Input is not a number!</span>
+            </div>
+
+            <div class="mdl-cell mdl-cell--4-col">
+              Quantity:
+            </div>
+            <div class="mdl-cell mdl-cell--2-col">
+            </div>
+            <!-- End Item ID input -->
+
+            <!-- -->
+            <div class="mdl-cell mdl-cell--6-col mdl-textfield mdl-js-textfield">
+              <textarea class="mdl-textfield__input" type="text" rows= "2" id="itemDescription" disabled></textarea>
+              <label class="mdl-textfield__label" for="itemDescription">Item description</label>
+            </div>
+
+            <div class="mdl-cell mdl-cell--6-col">
+            </div>
+            <!-- -->
           </div>
         </div>
       </section>
