--- a/record-delivery.html
+++ b/record-delivery.html
@@ -26,29 +26,29 @@
   <!-- SEO: If your mobile URL is different from the desktop URL, add a canonical link to the desktop page https://developers.google.com/webmasters/smartphone-sites/feature-phones -->
   <!--
   <link rel="canonical" href="http://www.example.com/">
-  -->
+-->
 
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.cyan-light_blue.min.css">
-  <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="styles/warehouse-styles.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+<link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.cyan-light_blue.min.css">
+<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="styles/warehouse-styles.css">
 
-  <!-- getmdl-select inclusions-->
-  <link rel="stylesheet" href="styles/getmdl-select.css">
-  <script src="js/getmdl-select.js"></script>
-  
-  <style>
-  #view-source {
-    position: fixed;
-    display: block;
-    right: 0;
-    bottom: 0;
-    margin-right: 40px;
-    margin-bottom: 40px;
-    z-index: 900;
-  }
-  </style>
+<!-- getmdl-select inclusions-->
+<link rel="stylesheet" href="styles/getmdl-select.css">
+<script src="js/getmdl-select.js"></script>
+
+<style>
+#view-source {
+  position: fixed;
+  display: block;
+  right: 0;
+  bottom: 0;
+  margin-right: 40px;
+  margin-bottom: 40px;
+  z-index: 900;
+}
+</style>
 </head>
 <body>
   <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
@@ -57,16 +57,16 @@
         <span class="mdl-layout-title">Warehouse</span>
         <div class="mdl-layout-spacer"></div>
         <nav class="mdl-navigation">
-            <img src="images/user.jpg" class="demo-avatar">
-            Warehouse Staffer
-            <button id="accbtn" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon">
-              <i class="material-icons" role="presentation">arrow_drop_down</i>
-              <span class="visuallyhidden">Accounts</span>
-            </button>
-            <ul class="mdl-menu mdl-menu--bottom-right mdl-js-menu mdl-js-ripple-effect" for="accbtn">
-              <li class="mdl-menu__item">Log out</li>
-            </ul>
-       </nav>
+          <img src="images/user.jpg" class="demo-avatar">
+          Warehouse Staffer
+          <button id="accbtn" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon">
+            <i class="material-icons" role="presentation">arrow_drop_down</i>
+            <span class="visuallyhidden">Accounts</span>
+          </button>
+          <ul class="mdl-menu mdl-menu--bottom-right mdl-js-menu mdl-js-ripple-effect" for="accbtn">
+            <li class="mdl-menu__item">Log out</li>
+          </ul>
+        </nav>
       </div>
     </header>
     <main class="mdl-layout__content mdl-color--grey-100">
@@ -114,45 +114,59 @@
       </section>
 
       <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--2dp">
-        <div class="mdl-card mdl-cell mdl-cell--12-col mdl-shadow--2dp">
+        <div class="mdl-card mdl-cell mdl-cell--12-col">
+          <div class="mdl-card__supporting-text mdl-grid">
           <!--
           <button class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon" id="btn2">
-              <i class="material-icons">delete</i>
-          </button>
-        -->
-        <div class="mdl-card__title mdl-cell mdl-cell--12-col">
-          <h2 class="mdl-card__title-text">Item</h2>
-        </div>
+          <i class="material-icons">delete</i>
+        </button>
+      -->
+            <div class="mdl-card__title mdl-cell mdl-cell--12-col mdl-grid mdl-grid--no-spacing">
+              <h2 class="mdl-card__title-text">Item</h2>
+            </div>
 
-          <div class="mdl-card__supporting-text">
             <!-- Item ID input -->
-            <div class="mdl-cell mdl-cell--5-col mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+            <div class="mdl-cell mdl-cell--4-col mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
               <input class="mdl-textfield__input" type="text" pattern="-?[0-9]*(\.[0-9]+)?" id="itemID">
               <label class="mdl-textfield__label" for="itemID">Item ID</label>
               <span class="mdl-textfield__error">Input is not a number!</span>
             </div>
 
-            <div class="mdl-cell mdl-cell--4-col">
-              Quantity:
+            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label mdl-cell mdl-cell--4-col">
+              <input class="mdl-textfield__input" type="text" pattern="-?[0-9]*(\.[0-9]+)?" id="itemQuantity">
+              <label class="mdl-textfield__label" for="itemQuantity">Quantity</label>
+              <span class="mdl-textfield__error">Input is not a number!</span>
             </div>
-            <div class="mdl-cell mdl-cell--2-col">
-            </div>
-            <!-- End Item ID input -->
 
-            <!-- -->
-            <div class="mdl-cell mdl-cell--6-col mdl-textfield mdl-js-textfield">
+            <div class="mdl-cell mdl-cell--4-col">
+            </div>
+
+        <!-- End Item ID input -->
+
+        <!-- Description -->
+            <div class="mdl-cell mdl-cell--4-col mdl-textfield mdl-js-textfield">
               <textarea class="mdl-textfield__input" type="text" rows= "2" id="itemDescription" disabled></textarea>
               <label class="mdl-textfield__label" for="itemDescription">Item description</label>
             </div>
 
-            <div class="mdl-cell mdl-cell--6-col">
+        <!-- Cost -->
+            <div class="mdl-cell mdl-cell--4-col mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+              <input class="mdl-textfield__input" type="text" pattern="-?[0-9]*(\.[0-9]+)?" id="itemCost" disabled>
+              <label class="mdl-textfield__label" for="itemCost">Cost</label>
+              <span class="mdl-textfield__error">Input is not a number!</span>
             </div>
-            <!-- -->
+
+        <!-- -->
+            <div class="mdl-cell mdl-cell--3-col mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+              <input class="mdl-textfield__input" type="text" pattern="-?[0-9]*(\.[0-9]+)?" id="itemTotal" disabled>
+              <label class="mdl-textfield__label" for="itemTotal">Total</label>
+              <span class="mdl-textfield__error">Input is not a number!</span>
+            </div>
           </div>
         </div>
       </section>
-    </main>
-  </div>
-  <script src="https://code.getmdl.io/1.1.3/material.min.js"></script>
+</main>
+</div>
+<script src="https://code.getmdl.io/1.1.3/material.min.js"></script>
 </body>
 </html>
